<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_go"
          android:title="@string/menu_go"
          android:showAsAction="always|withText" />
    
    <item
        android:id="@+id/menu_email"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/email"/>
    <item
        android:id="@+id/menu_git"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/git"/>
   	<item
        android:id="@+id/menu_play"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/play"/>
    <item
        android:id="@+id/menu_license"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/license"/>
    
    
</menu>